import React from 'react'
import { shallow } from 'enzyme'
import 'jest-styled-components'
import TabPage from '.'

const wrap = (props = {}) => shallow(<TabPage { ...props } />)

describe('<TabPage />', () => {
  it('정상적으로 렌더링된다', () => {
    const wrapper = wrap({ title: 'title' })
    expect(wrapper).toMatchSnapshot()
  })

  it('자식 컴포넌트가 들어온 경우 그려준다', () => {
    const wrapper = wrap({ children: 'test', title: 'title' })
    expect(wrapper).toMatchSnapshot()
  })

  it('title 속성이 들어온 경우 그려준다', () => {
    const wrapper = wrap({ title: 'foo' })
    expect(wrapper.props().title).toEqual('foo')
  })
})
